// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders all sizes 1`] = `
.emotion-0 {
  fill: var(--themeBrandPrimary,#7D58FF);
}

.emotion-1 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 12px;
  width: 100%;
  -webkit-animation: animation-8il3bs 0.6s linear infinite;
  animation: animation-8il3bs 0.6s linear infinite;
  background-image: linear-gradient( 45deg, transparent 25%, rgba(0,0,0,0.1) 25%, rgba(0,0,0,0.1) 50%, transparent 50%, transparent 75%, rgba(0,0,0,0.1) 75%, rgba(0,0,0,0.1) 100% );
  background-size: 12px 12px;
}

<Fragment>
  <SpacingBox
    side="bottom"
    spacingSize="xxs"
    tag="div"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    />
  </SpacingBox>
  <svg
    className="emotion-1"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-0"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
  </svg>
</Fragment>
`;

exports[`ProgressBar renders all sizes 2`] = `
.emotion-0 {
  fill: var(--themeBrandPrimary,#7D58FF);
}

.emotion-1 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
  -webkit-animation: animation-8il3bs 0.6s linear infinite;
  animation: animation-8il3bs 0.6s linear infinite;
  background-image: linear-gradient( 45deg, transparent 25%, rgba(0,0,0,0.1) 25%, rgba(0,0,0,0.1) 50%, transparent 50%, transparent 75%, rgba(0,0,0,0.1) 75%, rgba(0,0,0,0.1) 100% );
  background-size: 12px 12px;
}

<Fragment>
  <SpacingBox
    side="bottom"
    spacingSize="xxs"
    tag="div"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    />
  </SpacingBox>
  <svg
    className="emotion-1"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-0"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
  </svg>
</Fragment>
`;

exports[`ProgressBar renders isProcessing 1`] = `
.emotion-0 {
  fill: var(--themeBrandPrimary,#7D58FF);
}

.emotion-1 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
  -webkit-animation: animation-8il3bs 0.6s linear infinite;
  animation: animation-8il3bs 0.6s linear infinite;
  background-image: linear-gradient( 45deg, transparent 25%, rgba(0,0,0,0.1) 25%, rgba(0,0,0,0.1) 50%, transparent 50%, transparent 75%, rgba(0,0,0,0.1) 75%, rgba(0,0,0,0.1) 100% );
  background-size: 12px 12px;
}

<Fragment>
  <SpacingBox
    side="bottom"
    spacingSize="xxs"
    tag="div"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    />
  </SpacingBox>
  <svg
    className="emotion-1"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-0"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
  </svg>
</Fragment>
`;

exports[`ProgressBar renders with caption text and value text 1`] = `
.emotion-1 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
}

.emotion-0 {
  fill: var(--themeBrandPrimary,#7D58FF);
}

<Fragment>
  <SpacingBox
    side="bottom"
    spacingSize="xxs"
    tag="div"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    >
      <FlexItem
        flex="grow"
      >
        <CaptionText
          align="inherit"
          tag="p"
          wrap="truncate"
        >
          Caption
        </CaptionText>
      </FlexItem>
      <FlexItem
        flex="shrink"
      >
        <Text
          align="inherit"
          color="var(--themeTextColorPrimary, #1B2029)"
          dataCy="text"
          size="m"
          tag="p"
          weight="medium"
          wrap="wrap"
        >
          40%
        </Text>
      </FlexItem>
    </Flex>
  </SpacingBox>
  <svg
    className="emotion-1"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-0"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
  </svg>
</Fragment>
`;

exports[`ProgressBar renders with multiple segments of data 1`] = `
.emotion-2 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
}

.emotion-0 {
  fill: green;
}

.emotion-1 {
  fill: yellow;
}

<Fragment>
  <SpacingBox
    side="bottom"
    spacingSize="xxs"
    tag="div"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    />
  </SpacingBox>
  <svg
    className="emotion-2"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-0"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
    <rect
      className="emotion-1"
      height="100%"
      key="pbSegment-1"
      width="20%"
      x="40%"
    />
  </svg>
</Fragment>
`;

exports[`ProgressBar renders with one segment of data 1`] = `
.emotion-1 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
}

.emotion-0 {
  fill: var(--themeBrandPrimary,#7D58FF);
}

<Fragment>
  <SpacingBox
    side="bottom"
    spacingSize="xxs"
    tag="div"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    />
  </SpacingBox>
  <svg
    className="emotion-1"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-0"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
  </svg>
</Fragment>
`;
